--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"source": "https://github.com/jakezatecky/work-etc-client-php"
 	},
 	"require": {
-		"php": ">=5.4"
+		"php": ">=5.4",
+		"nategood/httpful": "~0.2.19"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.8"
