--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~5.1",
-		"mockery/mockery": "~0.9.4"
+		"mockery/mockery": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
