--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
 	},
 	"require": {
 		"php": ">=7.0",
-		"nategood/httpful": "~0.2.20"
+		"nategood/httpful": "^0.2.20"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~5.1",
+		"phpunit/phpunit": "^5.2.3",
 		"mockery/mockery": "dev-master"
 	},
 	"autoload": {
