--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"source": "https://github.com/jakezatecky/work-etc-client-php"
 	},
 	"require": {
-		"php": "^7.0",
+		"php": ">=7.0",
 		"ext-json": "*",
 		"nategood/httpful": "^0.3.0"
 	},
